k8s/redis-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-admin
  template:
    metadata:
      labels:
        app: redis-admin
    spec:
      containers:
        - name: redis-admin
          image: rediscommander/redis-commander:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
