k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traffic-app
spec:
  selector:
    app: traffic-app
  ports:
    - name: http
      port: 8000
      targetPort: 8000
