k8s/meme-content-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meme-content-api
spec:
  selector:
    app: meme-content-api
  ports:
    - name: http
      port: 9100
      targetPort: 9100
