k8s/redis-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-admin
spec:
  selector:
    app: redis-admin
  ports:
    - name: http
      port: 8081
      targetPort: 8081
