k8s/traffic-counter-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traffic-counter-api
spec:
  selector:
    app: traffic-counter-api
  ports:
    - name: http
      port: 9000
      targetPort: 9000
