k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traffic-platform
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: traffic-app
                port:
                  number: 8000
          - path: /redis(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: redis-admin
                port:
                  number: 8081
