k8s/meme-mock-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meme-mock-platform
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /mock-slack(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: meme-content-api
                port:
                  number: 9100
